[gd_scene load_steps=4 format=3 uid="uid://qi4ygwbsjiho"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_yqtrg"]
[ext_resource type="Theme" uid="uid://f1j8x4xbp5xn" path="res://themes/new_theme.tres" id="2_0had4"]
[ext_resource type="FontFile" uid="uid://bsgnu6yl5quvu" path="res://fonts/Blazma-Regular.ttf" id="3_w4jj8"]

[node name="Pause" type="CanvasLayer"]
layer = 2
script = ExtResource("1_yqtrg")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.882353, 0.898039, 0.94902, 0.596078)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.5
offset_top = -163.5
offset_right = 175.5
offset_bottom = 163.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_0had4")
theme_override_constants/line_spacing = -20
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_w4jj8")
theme_override_font_sizes/font_size = 80
text = "Pause"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_0had4")
theme_override_colors/font_color = Color(0.121569, 0.478431, 0.54902, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 40
text = "Secrets Await"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0had4")

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0had4")
text = "Resume"

[node name="MainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0had4")
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
